# osimperf-monitor

./: .gitignore  .gitmodules  .osimperf-cmake.conf  .osimperf-home  LICENSE  README.md  csv-plot.py
benchmarks/BasicMillard/: main.cpp  osimperf-test.conf  pre_benchmark.sh
benchmarks/CMC_RunningModel/: osimperf-test-disabled.conf  osimperf-test.conf  pre_benchmark.sh
benchmarks/CMC_RunningModel_Millard/: osimperf-test.conf  pre_benchmark.sh
benchmarks/CMC_RunningModel_Millard_Damped/: osimperf-test.conf  pre_benchmark.sh
benchmarks/Hopper/: CMakeLists.txt  config.h  exampleHopperDevice.cpp  osimperf-test.conf  pre_benchmark.sh
benchmarks/RajagopalContact/: osimperf-test.conf  pre_benchmark.sh
benchmarks/RajagopalContactReport/: osimperf-test.conf  pre_benchmark.sh
benchmarks/RajagopalContactReportEachStep/: Rajagopal2015.osim  osimperf-test.conf  pre_benchmark.sh
benchmarks/RajagopalFreeFall/: osimperf-test.conf  pre_benchmark.sh
benchmarks/RajagopalFreeFallUnDamped/: osimperf-test.conf  pre_benchmark.sh
compile-flags/: osimperf-biolab-targets.conf  osimperf-cmake-before-2020_06_01.conf  osimperf-cmake.conf
data/: osimperf-plot.csv  osimperf-report.md
examples/: .gitignore
examples/benchmark-main/: run-osimperf.sh
examples/benchmark-monthly-since/: run-osimperf.sh
osimperf/: .gitignore  Cargo.toml
osimperf/osimperf-cli/: Cargo.toml  README.md
osimperf/osimperf-cli/src/: file_backed_struct.rs  main.rs
osimperf/osimperf-cli/src/cli/: mod.rs
osimperf/osimperf-cli/src/cli/install_cmd/: mod.rs
osimperf/osimperf-cli/src/cli/list_cmd/: mod.rs
osimperf/osimperf-cli/src/cli/log_cmd/: mod.rs
osimperf/osimperf-cli/src/cli/plot_cmd/: log_diff.rs  mod.rs  plot.rs  table.rs  table_iter.rs
osimperf/osimperf-cli/src/cli/record_cmd/: mod.rs
osimperf/osimperf-cli/src/command/: mod.rs  single_command.rs
osimperf/osimperf-cli/src/common/: find.rs  folder_size.rs  mod.rs  read_write_json.rs
osimperf/osimperf-cli/src/common/git/: commit.rs  git.rs  mod.rs  repo.rs
osimperf/osimperf-cli/src/context/: env_vars.rs  install_id.rs  mod.rs
osimperf/osimperf-cli/src/install/: cmake_cmds.rs  mod.rs  progress.rs  repo.rs  status.rs
osimperf/osimperf-cli/src/parse_logs/: channel.rs  data.rs  mod.rs  time_and_value.rs
osimperf/osimperf-cli/src/record/: config.rs  durations.rs  mod.rs  node.rs  result.rs
osimperf/osimperf-lib/: Cargo.toml
osimperf/osimperf-lib/src/: cmake.rs  cmd_trait.rs  lib.rs  status.rs
osimperf/osimperf-lib/src/bench_tests/: config.rs  context.rs  id.rs  mod.rs  node.rs  plot.rs  result.rs  run_cmds.rs  table.rs
osimperf/osimperf-lib/src/binaries/: test_compiling.rs  test_git_cmds.rs  test_verify_install.rs
osimperf/osimperf-lib/src/command/: mod.rs  piped_command.rs  single_command.rs
osimperf/osimperf-lib/src/common/: config.rs  find.rs  git.rs  mod.rs  time.rs
osimperf/osimperf-lib/src/common/git/: commands.rs  mod.rs
osimperf/osimperf-lib/src/folders/: mod.rs
osimperf/osimperf-lib/src/node/: file.rs  focus.rs  installed_size.rs  mod.rs  status.rs  target.rs
osimperf/osimperf-lib/src/node/cmake/: config.rs  mod.rs  progress.rs
osimperf/osimperf-lib/src/node/cmake/cmake_cmds/: configure.rs  mod.rs
osimperf/osimperf-lib/src/node/compile/: cmake.rs  config.rs  mod.rs  progress.rs
osimperf/osimperf-lib/src/node/compile/cmake/: build.rs  mod.rs  output.rs
osimperf/osimperf-lib/src/node/repo/: commit.rs  id.rs  input.rs  mod.rs  params.rs  repo.rs  source.rs
osimperf/osimperf-lib/src/nodes/: mod.rs
osimperf/osimperf-lib/src/repo/: commit.rs  git.rs  hash.rs  mod.rs
osimperf/osimperf-monitor/: Cargo.toml
osimperf/osimperf-monitor/package/: .gitignore  configure.sh  deploy.sh
osimperf/osimperf-monitor/package/osimperf-monitor/DEBIAN/: control
osimperf/osimperf-monitor/src/: cmake.rs  cmd.rs  commit.rs  folders.rs  git.rs  main.rs  time.rs
osimperf/osimperf-monitor/src/bench_tests/: mod.rs  table.rs
osimperf/osimperf-print-csv/: Cargo.toml
osimperf/osimperf-tui/: Cargo.toml
osimperf/osimperf-tui/package/: .gitignore  configure.sh  deploy.sh
osimperf/osimperf-tui/package/osimperf-tui/DEBIAN/: control
osimperf/osimperf-tui/src/: main.rs
results/: .gitignore
scripts/: build-osimperf.sh  build_source.sh  csv-plot.py  dates_and_commits_from_source.sh  deploy.sh  duplicate_commit_dates_filter.sh  echoerr.sh  install-ubuntu.sh  install.sh  latest.sh  opensim-install.sh  osimperf-default-install-opensim  osimperf_filter_compiled.sh  osimperf_get_commits_since.sh  osimperf_monitor.sh  osimperf_trigger_compilation.sh  plot_last.sh  print-csv.sh  run-osimperf-example.sh  run-osimperf.sh  run.sh  run_bench_test_service.sh  run_echoerr.sh  run_print_table.sh  set-env-vars.sh  setup-benchmarks.sh  show-osimperf.sh  the-box-install.sh  tools-install.sh  versionCollector.sh
source/: CMakeLists.txt  install.sh  install_hotfix.sh
source/AddMuscleReporter/: CMakeLists.txt  main.cpp
source/AddVisualizer/: CMakeLists.txt  main.cpp
source/BasicMillard/: main.cpp
source/Hopper/: buildDeviceModel.cpp  buildHopperModel.cpp  buildTestbedModel.cpp  config.h  defineDeviceAndController.h
source/RunCMCTool/: CMakeLists.txt  main.cpp
source/RunTool/: CMakeLists.txt  main.cpp
source/SetFiberDamping/: CMakeLists.txt  main.cpp
source/SetMillard/: CMakeLists.txt  main.cpp
tests/Arm26/: arm26_Setup_Forward.xml  osimperf-test.conf  pre_benchmark_commands.sh
tests/BasicMillard/: CMakeLists.txt  osimperf-test-disabled.conf  osimperf-test.conf
tests/BasicMillardCorrected/: osimperf-test.conf
tests/BasicMillardDamped/: osimperf-test.conf
tests/HelloWorld/: osimperf-test.conf
tests/Hopper/: osimperf-test.conf
tests/HopperDefault/: osimperf-test.conf
tests/HopperLow/: osimperf-test.conf
tests/HopperTool/: osimperf-test-disable.conf  osimperf-test.conf
tests/MuscleHighDamped/: osimperf-test.conf
tests/MuscleLowDamped/: osimperf-test.conf
tests/MuscleMedDamped/: osimperf-test.conf
tests/Rajagopal/: osimperf-test.conf
tests/RajagopalContact/: Rajagopal2015.osim  osimperf-test.conf  (+1 more)
(+16 files in other folders)
