[package]
name = "osimperf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0.71"
clap         = {version = "4.0.23", features = ["derive"]}
env_logger   = "0.10.0"
log          = { version = "0.4" }
nix          = "0.26"
osimperf-lib = {path = "../osimperf-lib"}
rand         = "0.8.5"
serde        = {version = "1.0.152", features = ["derive"]}
serde_json   = "1.0.91"
chrono     = "0.4.27"
