[package]
name = "osimperf-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0.71"
env_logger   = "0.10.0"
log          = { version = "0.4" }
nix          = "0.26"
osimperf-lib = {path = "../osimperf-lib"}
serde        = {version = "1.0.152", features = ["derive"]}
serde_json   = "1.0.91"

[dependencies.clap]
clap     = "4.0.23"
features = ["derive"]
